# farm-intelligence

./: .gitignore  README.md  docker-compose.yml  render.yaml
backend/: CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 01ccf7d5a461_create_advisories_table.py  5a9c3e7f1b2d_create_weather_api_logs_table.py  6c69710303a7_create_farms_table.py  7d8e9f0a1b2c_create_tree_analyses_and_quota_records.py
backend/app/: main.py
backend/app/core/: cache.py  config.py  database.py
backend/app/middleware/: logging.py
backend/app/models/: __init__.py  advisory.py  farm.py  quota.py  tree_analysis.py  weather_api_log.py
backend/app/routers/: advisories.py  farms.py  trees.py  usage.py
backend/app/schemas/: advisory.py  farm.py  tree.py  usage.py
backend/app/services/: advisory_engine.py  quota_guard.py  tree_client.py  weather_client.py
backend/app/utils/: exceptions.py
backend/tests/: conftest.py  test_advisories.py  test_advisory_engine.py  test_cache.py  test_config.py  test_conftest.py  test_farms.py  test_health.py  test_operations.py  test_tree_client.py  test_tree_endpoint.py  test_usage.py  test_weather_client.py
frontend/: .dockerignore  .env.example  Dockerfile  eslint.config.js  index.html  package.json  vercel.json  vite.config.ts  vitest.config.ts
frontend/.lovable/: plan.md
frontend/src/: main.tsx  routeTree.gen.ts  router.tsx
frontend/src/routes/: farms.tsx  (+7 more)
frontend/tests/: api-client.test.ts  components.test.tsx  error-messages.test.ts  farm-schema.test.ts
(+18 files in other folders)
